# pyextremes

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  404.html  CITATION.cff  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_docs.yml  lint.yml  publish.yml  test.yml
api/eva/: index.html
api/extremes/: index.html
api/models/: index.html
api/plotting/: index.html
docs/: index.md  introduction.md  quickstart.md
docs/api/: api.md  eva.md  extremes.md  models.md  plotting.md
docs/includes/: abbreviations.md
docs/user-guide/: 1-read-first.md  10-selecting-distribution.md  11-return-values.md  13-visualization.md  14-goodness-of-fit.md  2-extreme-value-types.md  3-block-maxima.md  4-peaks-over-threshold.md  5-threshold-selection.md  6-return-periods.md  7-models.md  9-mcmc.md  read-first.md
docs/user-guide-advanced/: 1-distributions.md  2-extreme-value-transformation.md
docs/user-guide/extremes-extraction/: block-maxima.md  introduction.md  peaks-over-threshold.md  return-periods.md  threshold-selection.md
includes/abbreviations/: index.html
pyextremes/: __init__.py  eva.py  extremes.py  models.py  plotting.py
pyextremes/extremes/: __init__.py  block_maxima.py  extremes.py  peaks_over_threshold.py  return_periods.py  transformation.py
pyextremes/models/: __init__.py  base.py  distribution.py  emcee.py  mcmc.py  mle.py  model_base.py  models.py  pymc.py
pyextremes/models/emcee/: __init__.py  distribution_base.py  distributions.py  emcee.py  genextreme.py  genpareto.py
pyextremes/models/emcee/distributions/: __init__.py  distribution_base.py  distributions.py  expon.py  genextreme.py  genpareto.py  gumbel_r.py
pyextremes/plotting/: __init__.py  diagnostic.py  extremes.py  mcmc.py  porbability_plots.py  return_values.py  style.py
pyextremes/tuning/: __init__.py  hyperparameters.py  model_comparison.py  threshold_selection.py
quickstart/: index.html
scripts/: run-pytest.sh
scripts/lint/: run-black.sh  run-flake8.sh  run-isort.sh  run-pylint.sh
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/api/: index.html
site/includes/abbreviations/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/user-guide-advanced/1-distributions/: index.html
site/user-guide-advanced/2-extreme-value-transformation/: index.html
site/user-guide/1-read-first/: index.html
site/user-guide/10-selecting-distribution/: index.html
site/user-guide/11-return-values/: index.html
site/user-guide/12-confidence-intervals/: index.html
site/user-guide/13-visualization/: index.html
site/user-guide/14-goodness-of-fit/: index.html
site/user-guide/2-extreme-value-types/: index.html
site/user-guide/3-block-maxima/: index.html
site/user-guide/4-peaks-over-threshold/: index.html
site/user-guide/5-threshold-selection/: index.html
site/user-guide/6-return-periods/: index.html
site/user-guide/7-models/: index.html
site/user-guide/8-mle/: index.html
site/user-guide/9-mcmc/: index.html
src/pyextremes/: __init__.py  eva.py
src/pyextremes/extremes/: __init__.py  block_maxima.py  extremes.py  peaks_over_threshold.py  return_periods.py  transformation.py
src/pyextremes/models/: __init__.py  distribution.py  emcee.py  mle.py  model_base.py  model_emcee.py  model_mle.py  models.py
src/pyextremes/plotting/: __init__.py  extremes.py  mcmc.py  porbability_plots.py  probability_plots.py  return_values.py  style.py
src/pyextremes/tests/: __init__.py  ks_test.py  test_base.py
src/pyextremes/tuning/: __init__.py  hyperparameters.py  model_comparison.py  threshold_selection.py
tests/: conftest.py  test_extremes.py
tests/_shared_data/: extremes_bm_high.csv  extremes_bm_low.csv  extremes_pot_high.csv  extremes_pot_low.csv  generator.py
tests/data/: extremes_bm_high.csv  extremes_bm_low.csv  extremes_pot_high.csv  extremes_pot_low.csv  generator.py
tests/extremes/: test_block_maxima.py  test_extremes.py  test_peaks_over_threshold.py  test_return_periods.py  test_transformation.py
tests/integration/: test_eva.py
tests/models/: test_distribution.py  test_model_emcee.py  test_model_mle.py  test_models.py
tests/test_extremes/: test_extremes.py  test_extremes_block_maxima.py  test_extremes_peaks_over_threshold.py  test_extremes_return_periods.py  test_extremes_transformation.py  test_transformation.py
tests/test_models/: test_distribution.py  test_models_emcee.py  test_models_mle.py  test_models_models.py
tests/test_models/emcee/: test_models_emcee.py  test_models_emcee_distributions.py
tests/test_plotting/: test_extremes.py  test_plotting_extremes.py
tests/tests/: test_ks_test.py
user-guide-advanced/1-distributions/: index.html
user-guide-advanced/2-extreme-value-transformation/: index.html
user-guide/1-read-first/: index.html
user-guide/10-selecting-distribution/: index.html
user-guide/11-return-values/: index.html
user-guide/12-confidence-intervals/: index.html
user-guide/13-visualization/: index.html
user-guide/14-goodness-of-fit/: index.html
user-guide/2-extreme-value-types/: index.html
user-guide/3-block-maxima/: index.html
user-guide/4-peaks-over-threshold/: index.html
user-guide/5-threshold-selection/: index.html
user-guide/6-return-periods/: index.html
user-guide/7-models/: index.html
user-guide/8-mle/: index.html
user-guide/9-mcmc/: index.html
